--- a/CSS/signup.css
+++ b/CSS/signup.css
@@ -145,3 +145,15 @@ height: 100vh;
     opacity: 0;
   }
 }
+
+@media (max-width:477px) {
+  .form label .input {
+      width: 328px;
+  }
+}
+
+@media (max-width:400px) {
+  .form label .input {
+      width: 305px;
+  }
+}
