--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1695,6 +1695,9 @@ button.detail-button {
     #formm {
         font-size: 60px;
     }
+    .form label .input {
+        width: 328px;
+    }
 }
 
 @media (max-width:400px) {
@@ -1706,5 +1709,8 @@ button.detail-button {
     }
     .section-p1 {
         padding: 2px;
+    }
+    .form label .input {
+        width: 305px;
     }
 }
